# MarvelousPy

./: Design.md  ReadMe.md  _pyproject.toml  _setup.py  main.py  package  pyproject.toml  setup.py
doc/: .~lock.Design.ods#  Design.ods
marvelous/: collectionutils.py  marvelous.py
marvelous/pipe/switch/: SwitchBlock.py
marvelous/src/marvelous/: marvelous.py
marvelous/src/marvelous/pipe/switch/: SwitchBlock.py  SwitchBlockRegistryEntry.py
marvelous/src/pipe/switch/: SwitchBlock.py
marvelous/tests/: FunctionalProcessingTests.py
marvelous/tests/pipe/case/: CallableValueTests.py
src/: FunctionalProcessing.py
src/marvelous/: collectionutils.py
src/pipe/case/: CaseBlock.py  SwitchBlock.py  SwitchBlockRegistryEntry.py
src/pipe/registry/: PipelineRegistry.py  PipelineRegistryEntry.py
src/pipe/switch/: SwitchBlockRegistryEntry.py
test/: FunctionalProcessingTests.py  test_FunctionalProcessing.py
test/pipe/case/: CallableValueTests.py  test_CallableValue.py
