[tool.poetry]
name = "MarvelousPy"
version = "0.0.0.0"
description = "Amazing functional programming interface for Python."
authors = ["David Gayman <drg.developer.2@gmail.com>"]
readme = "ReadMe.md"
license = "Apache License 2.0"
packages = [
    { include = "marvelous" }
]

[tool.poetry.scripts]
main     = "main:main"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
